
* Add command completion (gdb: complete)

* Add log redirection (gdb: set logging, show logging)

* Add gdb directory commands: cd, pwd

* Add --cd invocation option 

* Add installation section in documentation

* reorder documentation so important stuff is towards the
  front. Small text corrections too.

* Add pyreadline as a configuration option.  

* Some single-letter command names for these reasons
  1. We now have command completion (often)
  2. If the letter isn't a command it can be used as a variable name
     in an assignment
  3. There is an alias mechanism that can be used
  4. Some of the commands like "j" for "jump" aren't used that much;
     or in the case of "cont" for "continue", there already was an 
     abbreviation "c". 
  5. Multiple names makes help and completion more awkward.

1.14
2006-02-28
* Fix bugs in configuration management. Make distcheck works again
  (sometimes)

1.13
2006-02-27

* Add MAN page (from Debian)
* Bump revision to 0.12 to 1.13 to be compatible with Debian pydb package.
* Improve set_trace(), post_mortem(), and pm()
* Document alternative invocation methods and how to call from a program.
* Break out cmds and bdb overrides into a separate module
* add optional count on "where"
* install in our own directory (e.g. site-packages/pydb)
  NOTE: REMOVE OLD PYDB INSTALLATIONS BEFORE INSTALLING THIS PYDB.
* As a result of the above add __init__.py to give package info.
* Don't rely on tabs settings. Remove all tabs in programs and use -t 
  to check that.
* Various bug fixes and documentation corrections

0.12
2006-02-21
* Add gdb commands: 
    - "cd" command
    - "display", "undisplay"
    - help subcommands for "show", "info", and "set"
    - info: "display", "line" "source" and "program"
    - "pwd" command
    - "return" (early exit from a function)
    - "shell" command
    - Extend "info line" to allow a function name.

* Use inspect module. Argument parameters and values are now shown.
