@@ -18,6 +18,9 @@
 
 * Add pyreadline as a configuration option.  
 
+* Position locaiton in file in GNU Emacs tracking in when in 
+  comint shell: pydbtrack is a modified pdbtrack for Pydb. 
+
 * Some single-letter command names for these reasons
   1. We now have command completion (often)
   2. If the letter isn't a command it can be used as a variable name
